--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,8 @@
   <link href='https://fonts.googleapis.com/css?family=Satisfy' rel='stylesheet'>
   <link href='https://fonts.googleapis.com/css?family=Teko' rel='stylesheet'>
   <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
+  <link href='https://fonts.googleapis.com/css?family=Bruno Ace' rel='stylesheet'>
+  <link href='https://fonts.googleapis.com/css?family=Libre Baskerville' rel='stylesheet'>
 </head>
 <body class="mat-typography">
   <app-root></app-root>
